samples/_failures_safe/1761371159_b600d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3d1e0b8.c: In function ‘main’:
./samples/SAFE/__tmp_a3d1e0b8.c:158:5: error: expected ‘,’ or ‘;’ at end of input
  158 |     double ratio = (double)compressed.size
      |     ^~~~~~
./samples/SAFE/__tmp_a3d1e0b8.c:158:5: error: expected declaration or statement at end of input
